# mahjong_hand_classifier

./: .gitignore  README.md  dataset-for-training-AutoML-Vision-model.csv  inference.ipynb  mahjong.yaml  mahjong_dataset.ipynb  mahjong_yolov8.yaml  pyproject.toml
custom_mahjong/: train.ipynb
custom_mahjong/mahjongv8m/train2/: results.csv
custom_mahjong/train/labels/: IMG_2742.txt  IMG_2745.txt  IMG_2747.txt  IMG_2748.txt  IMG_2750.txt  IMG_2756.txt  IMG_2766.txt  IMG_2770.txt  IMG_2772.txt  IMG_2773.txt  IMG_2774.txt  IMG_2775.txt  IMG_2776.txt
custom_mahjong/valid/labels/: IMG_2778.txt  IMG_2781.txt  IMG_2786.txt
dataset_archive/: mahjong_dataset.ipynb
dataset_archive/custom_mahjong/: data.yaml
dataset_archive/real_image_dataset_dense/: data.yaml
dataset_archive/real_image_datasets/: data.yaml
dataset_archive/real_riichi_images/: README.roboflow.txt
datasets/mahjong/labels/: train.cache  val.cache
flask_app/: app.py
flask_app/lib/: helper.py
flask_app/templates/: result.html  upload.html
mahjong/labels/: train.cache  val.cache
mahjong/labels/test/: 2024-03-11-22-51-35-364242.txt  2024-03-11-22-51-36-194619.txt  2024-03-11-22-51-36-918415.txt  2024-03-11-22-51-38-745244.txt  2024-03-11-22-51-39-563252.txt  2024-03-11-22-51-40-974504.txt  2024-03-11-22-51-41-850576.txt  2024-03-11-22-51-41-97044.txt  2024-03-11-22-51-43-533662.txt  2024-03-11-22-51-55-63362.txt  (+31 more)
real_image_datasets/: result.txt  train.ipynb
real_image_datasets/train/: labels.cache
real_image_datasets/valid/: labels.cache
real_riichi_images/: README.dataset.txt  data.yaml
(+3115 files in other folders)
